cargo-features = ["workspace-inheritance"]

[package]
name = "apiserver"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
config.workspace = true
convert_case.workspace = true
derive-new.workspace = true
derive_more.workspace = true
enum_dispatch.workspace = true
ethers-contract.workspace = true
ethers.workspace = true
eyre.workspace = true
futures-util.workspace = true
itertools.workspace = true
num-derive.workspace = true
num-traits.workspace = true
prometheus.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "parking_lot"] }
tracing-futures.workspace = true
tracing.workspace = true
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }

hyperlane-core = { path = "../../hyperlane-core", features = ["agent"] }
hyperlane-base = { path = "../../hyperlane-base" }
hyperlane-ethereum = { path = "../../chains/hyperlane-ethereum" }
hyperlane-test = { path = "../../hyperlane-test" }
ethers-prometheus = { path = "../../ethers-prometheus"}

anyhow = "1.0.75"

[dev-dependencies]
once_cell.workspace = true
tokio-test.workspace = true
hyperlane-base = { path = "../../hyperlane-base", features = ["test-utils"] }
mockall = "0.11"
tempdir = "0.3"

[features]
default = ["color-eyre", "oneline-errors"]
oneline-errors = ["hyperlane-base/oneline-errors"]
color-eyre = ["hyperlane-base/color-eyre"]
test-utils = ["hyperlane-base/test-utils"]
